...
}

class _MyRegisterWorkerState extends State<RegisterWorker> {
  int _activeStepIndex = 0;

  var address = TextEditingController();
  var phone = TextEditingController();
  var email = TextEditingController();
  var descripcion = TextEditingController();
  var foto_dpi = TextEditingController();
  var antecedente_penal = TextEditingController();
  var foto_perfil = TextEditingController();

...
            content: Column(
              children: [
                const SizedBox(
                  height: 8,
                ),
                TextField(
                  key: const Key("dirrecion"),
                  controller: address,
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(),
                      labelText: 'Dirección fiscal'),
                ),
                const SizedBox(
...
                      labelText: 'Número telefónico'),
                ),
                const SizedBox(
                  height: 8,
                ),
                TextField(
                  key: const Key("description"),
                  controller: descripcion,
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(),
                      labelText: 'Descripcion del Trabajo que Realiza'),
                ),
                const SizedBox(
...
                _activeStepIndex <= 1 ? StepState.editing : StepState.complete,
            isActive: _activeStepIndex >= 1,
            title: const Text('Subir Documentos'),
            content: Column(
              children: [
                TextField(
                  key: const Key("perfil"),
                  controller: foto_perfil,
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(), labelText: 'Foto perfil'),
                ),
                const SizedBox(
                  height: 8,
                ),
                TextField(
                  key: const Key("antecedentes"),
                  controller: antecedente_penal,
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(),
                      labelText: ' Foto Antecedentes Penales'),
                ),
                const SizedBox(
                  height: 8,
                ),
                TextField(
                  key: const Key("dpiPhoto"),
                  controller: foto_dpi,
                  decoration: const InputDecoration(
                      border: OutlineInputBorder(), labelText: 'Foto DPI'),
                ),
                const SizedBox(
                  height: 8,
...
          setState(() {});
        },
        controlsBuilder: (BuildContext context, ControlsDetails details) {
          return Row(
            children: <Widget>[
              ElevatedButton(
                key: const Key("continue"),
                onPressed: details.onStepContinue,
                child: const Text("Continue"),
              ),
              ElevatedButton(
                onPressed: details.onStepCancel,
                child: const Text("Cancel"),
...
