...
      ),
    );
  }

  Widget _bottonLogin() {
    return ElevatedButton(
        key: const Key("loginbutton"),
        child: Container(
          padding:
              const EdgeInsets.symmetric(horizontal: 100.0, vertical: 28.0),
          child: const Text('Iniciar Sesión'),
        ),
        style: ElevatedButton.styleFrom(
...
              context, MaterialPageRoute(builder: (context) => Ingreso()));
        });
  }

  Widget _buttonRegister() {
    return ElevatedButton(
        key: const Key("registerbutton"),
        child: Container(
          padding:
              const EdgeInsets.symmetric(horizontal: 100.0, vertical: 28.0),
          child: const Text('Registrarse'),
        ),
        style: ElevatedButton.styleFrom(
...
